--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="🔥¡Increíble noticia para todos los hombres!🍆">
 <meta property="og:description" content="😀Este método no sólo mejorará la potencia sexual, sino que también aumentará su pene en +8.3cm!!!👍">
-<meta property="og:image" content="https://i.imgur.com/zYJ4CKR.jpg>
+<meta property="og:image" content="https://i.imgur.com/zYJ4CKR.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
